--- a/index.html
+++ b/index.html
@@ -7,194 +7,40 @@
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap');
-
 :root{
-  --bg:#f0f4f2;
-  --card:#ffffff;
-  --accent:#1e8b63;
-  --gold:#d4af37;
-  --muted:#6b705c;
-  --friday:#cfe3d6;
-  --header-col:#49876d;
-  --first-col:#49876d;
+  --bg:#f0f4f2; --card:#ffffff; --accent:#1e8b63; --gold:#d4af37;
+  --friday:#cfe3d6; --header-col:#49876d; --first-col:#49876d;
 }
-
-html, body{
-  height:100%; margin:0;
-  font-family:'Amiri', serif;
-  background:var(--bg) url('https://www.toptal.com/designers/subtlepatterns/uploads/moroccan-flower.png') repeat;
-  background-size:cover;
-  color:#000;
-  box-sizing: border-box;
-}
-
-*, *::before, *::after {
-  box-sizing: inherit;
-}
-
-.container{
-  width: 95%;
-  max-width: 1000px; 
-  margin: 20px auto; 
-  padding: 10px;
-}
-
-.card{
-  background:var(--card);
-  border-radius:14px;
-  padding:1.5rem;
-  border:4px solid var(--gold);
-  box-shadow:0 8px 24px rgba(0,0,0,0.08);
-  position:relative;
-  background:url('https://www.toptal.com/designers/subtlepatterns/uploads/moroccan-flower.png') repeat;
-  background-size:250px;
-  backdrop-filter:blur(3px);
-}
-
-.card:before{
-  content:"";
-  position:absolute;
-  top:-10px; left:-10px; right:-10px; bottom:-10px;
-  border:3px solid var(--gold);
-  border-radius:20px;
-  pointer-events:none;
-}
-
-h1::before{
-  content:"";
-  display:block;
-  width:200px;
-  height:220px;
-  margin:0 auto 10px;
-  background: url('./img.png') center/contain no-repeat;
-}
-
-h1,h2{
-  font-size:1.5rem;
-  text-align:center;
-  margin-bottom:1rem;
-  color:var(--accent);
-  font-weight:700;
-}
-
-.table-wrapper{
-  overflow-x:auto;
-}
-
-table{
-  width:100%;
-  min-width:600px;
-  border-collapse: collapse;
-  font-size:1rem;
-  background:#fff;
-  border-radius:12px;
-  border:1px solid var(--gold);
-}
-
-thead th{
-  background:var(--header-col);
-  color:#fff;
-  text-align:center;
-  padding:0.8rem;
-  font-size:1rem;
-  border:1px solid #a9a9a9;
-}
-
-tbody td{
-  padding:0.6rem;
-  text-align:center;
-  border:1px solid #a9a9a9;
-}
-
+html, body{height:100%; margin:0; font-family:'Amiri', serif; background:var(--bg) url('https://www.toptal.com/designers/subtlepatterns/uploads/moroccan-flower.png') repeat; background-size:cover; color:#000; box-sizing:border-box;}
+*, *::before, *::after { box-sizing: inherit; }
+.container{ width:95%; max-width:1000px; margin:20px auto; padding:10px; }
+.card{ background:var(--card); border-radius:14px; padding:1.5rem; border:4px solid var(--gold); box-shadow:0 8px 24px rgba(0,0,0,0.08); position:relative; background:url('https://www.toptal.com/designers/subtlepatterns/uploads/moroccan-flower.png') repeat; background-size:250px; backdrop-filter:blur(3px); }
+.card:before{ content:""; position:absolute; top:-10px; left:-10px; right:-10px; bottom:-10px; border:3px solid var(--gold); border-radius:20px; pointer-events:none; }
+h1,h2{ font-size:1.5rem; text-align:center; margin-bottom:1rem; color:var(--accent); font-weight:700; }
+.table-wrapper{ overflow-x:auto; }
+table{ width:100%; min-width:600px; border-collapse: collapse; font-size:1rem; background:#fff; border-radius:12px; border:1px solid var(--gold); }
+thead th{ background:var(--header-col); color:#fff; text-align:center; padding:0.8rem; font-size:1rem; border:1px solid #a9a9a9; }
+tbody td{ padding:0.6rem; text-align:center; border:1px solid #a9a9a9; }
 tbody tr:nth-child(odd){ background: rgba(211,211,211,0.2); }
 tbody tr:nth-child(even){ background: rgba(211,211,211,0.1); }
 tbody tr:hover{ background: rgba(211,211,211,0.3); }
-
-tbody td:first-child{
-  background:var(--first-col);
-  color:#fff;
-  font-weight:700;
-}
-
+tbody td:first-child{ background:var(--first-col); color:#fff; font-weight:700; }
 tbody tr.friday{ background-color:var(--friday) !important; }
-
 table th:first-child, table td:first-child{ width:150px; }
-
-.card-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  position: sticky;
-  top: 0;
-  z-index: 10;
-  border-radius: 12px 12px 0 0;
-  padding: 0.5rem 1rem;
-}
-
-#saveBtn, #printBtn {
-  padding:0.5rem 1rem;
-  border-radius: 12px;
-  cursor:pointer;
-  font-weight:bold;
-  color:#fff;
-  font-size:1rem;
-  border:none;
-  transition:0.2s;
-  margin:0.2rem;
-}
-
-#saveBtn { background: var(--gold); }
-#saveBtn:hover { background: #c49b2c; }
-
-#printBtn { background: var(--accent); }
-#printBtn:hover { background: #397155; }
-
-#saveMessage {
-  color: green;
-  font-weight: bold;
-  display: none;
-  margin-left: 0.5rem;
-}
-
-.contact-box {
-  background: var(--card);
-  padding: 0.5rem 1rem;
-  border: 2px solid var(--gold);
-  border-radius: 12px;
-  text-align: center;
-  color: var(--accent);
-  font-size: 0.9rem;
-  line-height: 1.3;
-  display: inline-block;
-  margin-top:0.5rem;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-}
-
-/* Media Queries */
-@media(max-width:900px){
-  h1,h2{ font-size:1.3rem; }
-  table{ font-size:0.9rem; }
-}
-
-@media(max-width:600px){
-  .card-header{
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  #saveBtn, #printBtn{ width: 100%; margin-bottom:0.5rem; }
-  .contact-box{ width: 100%; margin-top:0.5rem; }
-}
-
-@media print {
-  body * { visibility: hidden; }
-  #mainTable, #mainTable * { visibility: visible; }
-  #mainTable { position: absolute; top: 0; left: 0; width: 100%; }
-}
+.card-header { display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; position:sticky; top:0; z-index:10; border-radius:12px 12px 0 0; padding:0.5rem 1rem; }
+#saveBtn, #printBtn { padding:0.5rem 1rem; border-radius:12px; cursor:pointer; font-weight:bold; color:#fff; font-size:1rem; border:none; transition:0.2s; margin:0.2rem; }
+#saveBtn { background: var(--gold); } #saveBtn:hover { background: #c49b2c; }
+#printBtn { background: var(--accent); } #printBtn:hover { background: #397155; }
+#saveMessage { color: green; font-weight: bold; display: none; margin-left: 0.5rem; }
+.contact-box { background: var(--card); padding:0.5rem 1rem; border:2px solid var(--gold); border-radius:12px; text-align:center; color: var(--accent); font-size:0.9rem; line-height:1.3; display:inline-block; margin-top:0.5rem; box-shadow:0 2px 6px rgba(0,0,0,0.08); }
+@media(max-width:900px){ h1,h2{ font-size:1.3rem; } table{ font-size:0.9rem; } }
+@media(max-width:600px){ .card-header{ flex-direction: column; align-items:flex-start; } #saveBtn,#printBtn{ width:100%; margin-bottom:0.5rem; } .contact-box{ width:100%; margin-top:0.5rem; } }
+@media print { body * { visibility:hidden; } #mainTable, #mainTable * { visibility:visible; } #mainTable { position:absolute; top:0; left:0; width:100%; } }
 </style>
-</head>
 
+</head>
 <body>
+
 <div class="container">
   <div class="card">
     <div class="card-header">
@@ -204,13 +50,13 @@ table th:first-child, table td:first-child{ width:150px; }
         <button id="printBtn">🖨️ طباعة</button>
       </div>
       <div class="contact-box">
-        <strong> إدارة الجامع:</strong><br/>
+        <strong>إدارة الجامع:</strong><br/>
         فيصل المبسلي: 98036047<br/>
         داوود المبسلي: 95522897
       </div>
     </div>
 
-    <h1>جدول محاضرات رمضان 1447 م - جامع الإمام الربيع بن حبيب</h1>
+    <h1>جدول محاضرات رمضان 1447 هـ - جامع الإمام الربيع بن حبيب</h1>
     <h2>السيب - وادي اللوامي</h2>
 
     <div class="table-wrapper">
@@ -229,95 +75,94 @@ table th:first-child, table td:first-child{ width:150px; }
   </div>
 </div>
 
-<script>
-const tbody = document.querySelector("#mainTable tbody");
+<!-- Firebase + سكربت الجدول -->
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.25.0/firebase-app.js";
+import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.25.0/firebase-database.js";
 
-function createRow(index) {
-  const tr = document.createElement("tr");
+const firebaseConfig = {
+  apiKey: "AIzaSyBHeiv5zSF7aBdg-d_jIGO-h7Rf9tY9IHE",
+  authDomain: "ramadan-table.firebaseapp.com",
+  databaseURL: "https://ramadan-table-default-rtdb.firebaseio.com",
+  projectId: "ramadan-table",
+  storageBucket: "ramadan-table.firebasestorage.app",
+  messagingSenderId: "912045120400",
+  appId: "1:912045120400:web:27592d0c367bd2e5c13115"
+};
 
-  const startDate = new Date(2026,1,18);
-  const currentDate = new Date(startDate);
-  currentDate.setDate(startDate.getDate() + (index-1));
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
 
-  const day = currentDate.getDate();
-  const month = currentDate.getMonth()+1;
-  const year = currentDate.getFullYear();
+document.addEventListener("DOMContentLoaded",()=>{
+  const tbody=document.querySelector("#mainTable tbody");
+  const TOTAL_DAYS=30;
+  const START_DATE=new Date(2026,1,18);
+  const weekdays=["الأحد","الاثنين","الثلاثاء","الأربعاء","الخميس","الجمعة","السبت"];
 
-  const weekdays = ["الأحد","الاثنين","الثلاثاء","الأربعاء","الخميس","الجمعة","السبت"];
-  const weekdayName = weekdays[currentDate.getDay()];
-  if(weekdayName==="الجمعة") tr.classList.add("friday");
+  // إنشاء الصفوف
+  for(let i=1;i<=TOTAL_DAYS;i++){
+    const tr=document.createElement("tr");
+    const currentDate=new Date(START_DATE);
+    currentDate.setDate(START_DATE.getDate()+i-1);
+    const weekdayName=weekdays[currentDate.getDay()];
+    if(weekdayName==="الجمعة") tr.classList.add("friday");
 
-  const tdDate = document.createElement("td");
-  tdDate.contentEditable=true;
-  tdDate.dataset.row=index;
-  tdDate.dataset.col=1;
-  tdDate.textContent=`${day}/${month}/${year} - ${weekdayName} - رمضان ${index}`;
-  tdDate.addEventListener("input",()=>saveCell(index,1,tdDate.textContent));
-  tr.appendChild(tdDate);
+    // التاريخ
+    const tdDate=document.createElement("td");
+    tdDate.textContent=`${currentDate.getDate()}/${currentDate.getMonth()+1}/${currentDate.getFullYear()} - ${weekdayName} - رمضان ${i}`;
+    tr.appendChild(tdDate);
 
-  const tdTime=document.createElement("td");
-  const selectTime=document.createElement("select");
-  const options=(weekdayName==="الجمعة") ? ["بعد صلاة الجمعة","بعد صلاة العصر","بعد صلاة المغرب","بعد صلاة العشاء"] : ["بعد صلاة العصر","بعد صلاة الظهر","بعد صلاة المغرب","بعد صلاة العشاء"];
-  options.forEach(opt=>{
-    const option=document.createElement("option");
-    option.value=opt;
-    option.textContent=opt;
-    if(loadCell(index,2)===opt) option.selected=true;
-    selectTime.appendChild(option);
-  });
-  selectTime.addEventListener("change",()=>saveCell(index,2,selectTime.value));
-  tdTime.appendChild(selectTime);
-  tr.appendChild(tdTime);
+    // الوقت (select)
+    const tdTime=document.createElement("td");
+    const select=document.createElement("select");
+    const options=(weekdayName==="الجمعة")?["بعد صلاة الجمعة","بعد صلاة العصر","بعد صلاة المغرب","بعد صلاة العشاء"]
+                                      :["بعد صلاة الظهر","بعد صلاة العصر","بعد صلاة المغرب","بعد صلاة العشاء"];
+    options.forEach(opt=>{ const option=document.createElement("option"); option.value=opt; option.textContent=opt; select.appendChild(option); });
+    tdTime.appendChild(select);
+    tr.appendChild(tdTime);
 
-  const tdName=document.createElement("td");
-  tdName.contentEditable=true;
-  tdName.dataset.row=index;
-  tdName.dataset.col=3;
-  tdName.textContent=loadCell(index,3)||"";
-  tdName.addEventListener("input",()=>saveCell(index,3,tdName.textContent));
-  tr.appendChild(tdName);
+    // اسم المحاضر (قابل للتحرير)
+    const tdName=document.createElement("td");
+    tdName.contentEditable=true;
+    tr.appendChild(tdName);
 
-  const tdContact=document.createElement("td");
-  tdContact.contentEditable=true;
-  tdContact.dataset.row=index;
-  tdContact.dataset.col=4;
-  tdContact.textContent=loadCell(index,4)||"";
-  tdContact.addEventListener("input",()=>saveCell(index,4,tdContact.textContent));
-  tr.appendChild(tdContact);
+    // رقم التواصل (قابل للتحرير)
+    const tdContact=document.createElement("td");
+    tdContact.contentEditable=true;
+    tr.appendChild(tdContact);
 
-  return tr;
-}
+    tbody.appendChild(tr);
+  }
 
-function populateInitialRows(n=30){
-  tbody.innerHTML="";
-  for(let i=1;i<=n;i++) tbody.appendChild(createRow(i));
-}
+  // ربط كل خلية ب Firebase
+  for(let i=1;i<=TOTAL_DAYS;i++){
+    const tr=tbody.querySelectorAll("tr")[i-1];
 
-populateInitialRows();
-
-function saveCell(row,col,value){
-  localStorage.setItem(`cell_${row}_${col}`,value);
-}
-function loadCell(row,col){
-  return localStorage.getItem(`cell_${row}_${col}`);
-}
-
-document.getElementById("saveBtn").addEventListener("click",()=>{
-  const rows=tbody.querySelectorAll("tr");
-  rows.forEach(tr=>{
-    tr.querySelectorAll("td").forEach(td=>{
-      saveCell(td.dataset.row,td.dataset.col,td.textContent)
+    ["3","4"].forEach(col=>{
+      const td=tr.querySelector(`td:nth-child(${col})`);
+      const cellRef=ref(db,"cells/"+i+"_"+col);
+      onValue(cellRef,snap=>{ if(snap.exists()) td.textContent=snap.val(); });
+      td.addEventListener("input",()=>set(cellRef,td.textContent));
     });
-    const select=tr.querySelector("select");
-    if(select) saveCell(tr.querySelector("td").dataset.row,2,select.value);
-  });
-  const msg=document.getElementById("saveMessage");
-  msg.style.display="inline";
-  setTimeout(()=>{ msg.style.display="none";},2000);
-});
 
-document.getElementById("printBtn").addEventListener("click",()=>window.print());
+    const select=tr.querySelector("td:nth-child(2) select");
+    const timeRef=ref(db,"cells/"+i+"_2");
+    onValue(timeRef,snap=>{ if(snap.exists()) select.value=snap.val(); });
+    select.addEventListener("change",()=>set(timeRef,select.value));
+  }
+
+  // زر الحفظ (يمكنك تركه أو حذف لأنه Firebase مباشر)
+  const saveBtn=document.getElementById("saveBtn");
+  const saveMessage=document.getElementById("saveMessage");
+  saveBtn.addEventListener("click",()=>{
+    saveMessage.style.display="inline";
+    setTimeout(()=>saveMessage.style.display="none",2000);
+  });
+
+  // الطباعة
+  document.getElementById("printBtn").addEventListener("click",()=>window.print());
+});
 </script>
+
 </body>
 </html>
-
